(Format: Year/Month/Day)
Changes for 0.9.10:
*04/08/29:
  * More random render fixes (Simon)
    (font alignment in menu, menu optimisation, toolbar font/render)
    FbTk/Menu.cc FbTk/MenuItem.cc FbTk/XftFontImp.cc 
    TextTheme.cc Toolbar.cc ToolbarItem.hh <ToolbarTools>.hh/cc 
*04/08/28:
  * Some more menu rendering fixes (Simon)
    Thanks Florian Pigorsch for nice bug reports + debugging
    FbTk/Menu.cc
  * Fix some blank fonts problem for i18n (I think)  (Simon)
    FbTk/Font.cc FbTk/XmbFontImp.cc
  * Fix menu render bug with previously highlighted items (Simon)
    FbTk/Menu.cc
*04/08/27:
  * Protect Fluxbox::shutdown better from being double-called (Simon)
    fluxbox.cc
  * Improve fallback if toolbar button style item missing (Simon)
    ButtonTheme.hh/cc ToolFactory.cc
*04/08/26:
  * Tiny unification (Mathias)
    - theme.cfg and style.cfg allowed
    - in menufiles:
        [stylesdir] and [themesdir] allowed
        [stylesmenu] and [themesmenu] allowed
  * Fix bevel on solid colour textures (Simon)
    FbTk/Texture.hh/cc FbTk/ThemeItems.hh
  * Make arrow in toolbar buttons scalable size (Simon)
    - new theme item: toolbar.button.scale:  <number>
      The number is a scale factor, which is divided into 100 to give
      the size relative to the button. 100 gives a arrow the same size 
      as button, 200 gives half the size, 300 a third, etc.
    - default is now 300, not 200
    - also fix size balance with left/right arrows
    ArrowButton.hh/cc ButtonTheme.hh/cc ButtonTool.cc FbTk/Button.hh
  * Fixed 2 possible Memleaks (Mathias)
    Ewmh.cc
  * Re-implement bevels in toolbar, plus numerous toolbar-related theme
    fixes => old styles now look like they used to! (Simon)
    Toolbar.cc ToolbarItem.h ToolTheme.cc ToolbarTheme.cc ToolFactory.cc
    ArrowButton.cc ButtonTheme.cc ClockTool.cc IconbarTheme.cc 
    IconbarTool.cc SystemTray.hh WorkspaceNameTool.cc
*04/08/25:
  * Fix to draw Cursors in Textboxes correctly again (Mathias)
    Font.cc